Fixed alignment + Added more features

--- a/app/(pages)/_components/StoreListing/StoreListing.module.scss
+++ b/app/(pages)/_components/StoreListing/StoreListing.module.scss
@@ -1,58 +1,89 @@
    .main {
-        justify-content: center;
-        width: 100%;
-        height: 100%;
+          // border: solid black 1px;
+          display: flex;
+          justify-content: center;
    }
    
    .title{
-    color: #E4A135;
-    font-size: 64px;
-    font: Poppins;
+     // border: solid black 1px;
+          margin-left: 50px;
+
+          color: #E4A135;
+          font-size: 64px;
+          font-family: 'Poppins', sans-serif;
    }
 
-    .top, .listingrow1, .listingrow2{
+   .top {
+     height: 80px;
+   }
+   
+    .top, .listingrow1, .listingrow2, .cart{
+     // border: solid black 1px;
         display: flex;
-        flex-direction: row;
-        // margin-top: 50px;
    }
 
    .listingrow1, .listingrow2{
-    margin-bottom: 100px;
-    margin-right: 50px;
-    margin-left:50px;
-    border: 1px black solid;
-    justify-content: center;
+     // border: black solid 1px;
+          margin-bottom: 50px;
+          
+          display: flex;
+          justify-content: center; 
    }
+
    .buttons {
-        // border: solid black 1px;
-        justify-content: end;
-        margin: 10px;
+          // border: solid black 1px;
         padding: 10px;
+        margin-left: auto;
    }
 
    .btn1{
         margin: 8px;
+
         border-radius: 50px;
         border: 0px;
         background-color: #CFBAE8;
         font-size: 16px;
+
         width: 100px;
         height: 44px;
 
    }
-   .btn2, .btn3{
+   .btn2{
         margin: 8px;
+
         border-radius: 50px;
         border: 0px;
         background-color: #CFBAE8;
         font-size: 16px;
+
         width: 200px;
         height: 44px;
    }
 
-   .btn1:hover, .btn2:hover, .btn3:hover{
+   .btn1:active, .btn2:active{
     background: linear-gradient(200deg, #04164F 7.1%, #3D1069 62.03%, #750B83 94.99%);
     color: white;
+   }
+
+   .cart{
+     // border: solid black 1px;
+     margin-left: auto;
+     margin-bottom: 20px;
+
+     width: 70px;
+     height: 50px;
+   }
+
+   .btn4{
+          // margin: 8px;
+        border-radius: 50px;
+        border: 0px;
+        font-size: 16px;
+        background: linear-gradient(200deg, #04164F 7.1%, #3D1069 62.03%, #750B83 94.99%);
+        color: white;
+
+        width: 50px;
+        height: 50px;
    }
 
 
@@ -67,24 +98,83 @@
 
 
    .container {
-    border: solid #E4A135 1px;
-    margin: px;
+    border: solid #E4A135 2px;
     transition: 0.3s;
-    border-radius: 5px;
-    width: 300px;
-    height: 300px;
+    border-radius: 10px;
+
+    width: 424px;
+    height: 424px;
    }
 
    .card {
-    margin-right: 20px;
-    width: 300px;
-    height: 300px;
+     // border: black solid 1px;
+
+     margin: 10px;
+
+    width: 424px;
+    height: 500px;
     }
     
     .card:hover {
         box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
     }
-    
-    .container {
-        padding: 2px 16px;
+
+    .productdetail{
+     // border: black solid 1px;
+     display: flex;
+     flex-direction: row;
+
+     padding-top: 20px;
+
+     width: 424px;
+     height: 70px;
+
     }
+
+    .productname{
+     // border: black solid 1px;
+     width: 300px;
+    }
+
+    .cost{
+     // border: black solid 1px;
+     padding-right: 20px;
+     margin-left: auto;
+     
+     color: #E4A135;
+     font-family: 'Poppins', sans-serif;
+     font-weight: bold;
+     
+     width: 60px;
+    }
+
+    .bottom{
+     // border: 1px black solid;
+     padding-top: 0px;
+    }
+
+    .pagination {
+     display: flex;
+     justify-content: center;
+     list-style-type: none;
+   }
+   
+   .pagination a {
+     padding-top: 20px;
+     margin: 0 5px;
+     
+     text-decoration: none;
+     color: #750B83;
+     border-radius: 5px;
+   }
+   
+   .pagination a:hover {
+     font-weight: bold;
+     font-size: 18px;
+   }
+   
+   .pagination .active {
+     color: white;
+     background-color: black;
+   }
+   
